grid tweak to fix overlap

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,10 +2,10 @@
     position: fixed;
     width: 100%;
     background-color:azure;
-    height:5vh;
+    max-height:5vh;
     z-index: 100;
     top: 0;
-    padding-top: 10px;
+    padding: 3px;
   
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
   
