--- a/src/routes/Planner/PlannerPage.css
+++ b/src/routes/Planner/PlannerPage.css
@@ -1,6 +1,6 @@
 .calendar{
     margin:auto;
-    margin-top:10px;
+    /* margin-top:10px; */
     box-shadow: 0px 0px 10px rgba(194, 145, 145, 0.287)inset;
     grid-row-start: 1;
     grid-row-end: 2;
@@ -10,7 +10,7 @@
 .planner-page{
     display:grid;
     grid-template-columns: 100%;
-    grid-template-rows: 33.3% 33.3% 33.3%;
+    grid-template-rows: 38% 30% 32%;
     height:95vh;
     margin-top:5vh;
    
